# dribble

./: pyproject.toml
resources/: offsets.json
src/dribble/memory/: __init__.py  reading.py  writing.py
src/dribble/models/: __init__.py  converters.py  game.py
src/dribble/utils/: misc.py
